@@ -18,6 +18,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [FRONTEND] [FILEBEAT] Avoid overriding default module config for all Frontends when changed in one
 - [FRONTEND] Disable logforwarder if logging disabled
 - [FRONTEND] Reload services only on involved nodes
+- [FRONTEND] Remove old conf when changing frontend mode to avoid duplicate ruleset
 
 
 ## [2.9.0] - 2023-07-20
